--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <noscript>
       <strong>We're sorry but vxe-table doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script src="https://cdn.jsdelivr.net/npm/xe-utils" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/xe-ajax" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/xe-clipboard" async></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
