--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,9 @@
     <meta name="renderer" content="webkit">
     <meta name="HandheldFriendly" content="true">
     <meta name="MobileOptimized" content="320">
-    <meta name="screen-orientation" content="portrait">
-    <meta name="x5-orientation" content="portrait">
-    <meta name="full-screen" content="yes">
-    <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="browsermode" content="application">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Home</title>
   </head>
