--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,9 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
     <meta name="renderer" content="webkit">
-    <meta name="HandheldFriendly" content="true">
-    <meta name="MobileOptimized" content="320">
     <meta name="browsermode" content="application">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Home</title>
   </head>
