--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,viewport-fit=cover">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Home</title>
+    <title>小徐</title>
   </head>
   <body>
     <noscript>
