--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,22 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>小徐的首页</title>
     <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?bb92c84d2dff18210f9be4cf2aa28fee";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
+      var _hmt = _hmt || [];
+      (function() {
+        if (location.host.indexOf('localhost') === -1) {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?bb92c84d2dff18210f9be4cf2aa28fee";
+          hm.onload = function () {
+            _hmt.push(['_requirePlugin', 'UrlChangeTracker', {
+              shouldTrackUrlChange: function (newPath, oldPath) {
+              return newPath && oldPath;
+              }}
+            ]);
+          }
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(hm, s);
+        }
+      })();
     </script>
   </head>
   <body>
